--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <script src="js/app.js"></script>
 
         <link rel="stylesheet" href="css/style.css">
-        <link rel="shortcut icon" href="pic/angular.jfif" type="image/x-icon">
+        <link rel="shortcut icon" href="https://res.cloudinary.com/djuf0cyrk/image/upload/v1688995247/favicons/android-chrome-512x512_n4ijfc.png" type="image/x-icon">
         <link rel="stylesheet" href="css/bootstrap.min.css">
         <link rel="stylesheet" href="https://site-assets.fontawesome.com/releases/v6.0.0/css/all.css">
 
